syntax = "proto3";

package berty.pkg.deviceinfo;

option go_package = "berty.tech/core/pkg/deviceinfo";

// DeviceInfos is a graphql-friendly, sortable map container
message DeviceInfos {
  repeated DeviceInfo infos = 1;
}

message DeviceInfo {
  string key = 1;
  string value = 2;
}
