syntax = "proto3";

package berty.network.metric;

import "gogoproto/gogo.proto";

option go_package = "berty.tech/network/metric";

enum MetricsType {
  // global monitor a metric globally
  GLOBAL = 0;

  // protocol monitor a specific protocol
  PROTOCOL = 1;

  // peer monitor a specific peer
  PEER = 2;
}

message BandwidthStats {
  string id = 1 [(gogoproto.customname) = "ID"];
  int64 total_in  = 2;
  int64 total_out  = 3;
  double rate_in  = 4;
  double rate_out  = 5;
  MetricsType type = 6;
}

message ListAddrs {
  repeated string addrs = 1;
}

message PingReq {
  string str = 1;
}
